<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:layout_gravity="center">
            <TextView
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:text="@string/str_itm_favorite_route"/>
            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/id_item_favorite_route"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="italic"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/str_itm_favorite_route_bus"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@android:color/black"
                android:textSize="15dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/str_itm_favorite_neighborhood" />
            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/id_item_favorite_neighborhood"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="italic"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/str_itm_favorite_neighborhood_car"/>
        </LinearLayout>



    </LinearLayout>

</LinearLayout>