<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.leo_i019213.appemas.Views.Fragments.ProfileFragment">

    <include layout="@layout/actionbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"

            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="196dp"
                android:orientation="vertical"
                android:gravity="bottom"
                android:background="@mipmap/ic_launcher"
                android:layout_weight="0.1">

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/id_txt_profile_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/blue"
                        android:text="@string/name_user"
                        android:textSize="32dp"
                        android:layout_margin="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"                >

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">



                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <TextView
                            android:textColor="@color/blue"
                            android:id="@+id/txt_help"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_fragment_profile_email"/>
                        <TextView
                            android:textColor="@color/blue"
                            android:id="@+id/id_txt_profile_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/info_profile_email"
                            android:onClick="onShowAccount"
                            android:layout_toRightOf="@id/txt_help"/>
                    </RelativeLayout>


                </LinearLayout>




                <Button
                    android:id="@+id/id_btn_fragment_profile_Sign_off"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_fragment_profile_sign_off"
                    android:theme="@style/StyleButton"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</android.support.design.widget.CoordinatorLayout>
